# cc-workspace

./: .gitignore  README.md  bc.md  boldtest.md  build_anki.py  check_progress.py  clean_vocab.py  daodu.md  extract_vocab.py  generate_audio.py  mathtest.md  mjxtest.md  pyproject.toml  retry_failed_pages.py  sec421.md  tbl.md  u.md  u2.md  v01.md  v01b.md  v02.md  v02b.md  vdaodu.md
.claude/: .gitignore  CLAUDE.md  settings.json
idf/humanoid_robot_barge_in_design/: humanoid_robot_barge_in_design.md  humanoid_robot_barge_in_patent_ideas(revivew).md  humanoid_robot_barge_in_patent_ideas.md  idf.md
idf/humanoid_voice_idf/: humanoid_voice_idf.md  humanoid_voice_idf_explained.md
idf/voice_assistant_barge_in/: voice-assistant-barge-in-design.md
