[project]
name = "claude-ws"
version = "0.1.0"
description = "General-purpose workspace for Claude Code ad-hoc tasks"
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.8.2",
    "easyocr>=1.7.2",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "pydub>=0.25.1",
    "python-pptx>=1.0.2",
    "soundfile>=0.13.1",
]
