[project]
name = "claude-ws"
version = "0.1.0"
description = "General-purpose workspace for Claude Code ad-hoc tasks"
requires-python = ">=3.10,<3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "easyocr>=1.7.2",
    "numpy<2",
    "pillow>=12.1.1",
    "python-pptx>=1.0.2",
    "selenium>=4.41.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
